--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
 
 dev_dependencies:
   flutter_test:
