--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.5
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
+  firebase_database: ^11.3.6
 
 dev_dependencies:
   flutter_test:
