calculation page ui done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "cmake.sourceDirectory": "D:/laragon/www/nutriplan/linux",
+    "cmake.sourceDirectory": "C:/Users/donut/Project/Nutriplan/nutriplan/linux",
     "java.configuration.updateBuildConfiguration": "interactive"
 }
