--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -44,10 +43,20 @@ dependencies:
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   firebase_database: ^11.3.6
+  flutter_local_notifications: ^19.2.1
+  timezone: ^0.10.1
+  device_info_plus: ^11.5.0
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.14.4"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/img/logo.png"
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
