--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,6 @@ dependencies:
   percent_indicator: ^4.2.5
   flutter_native_splash: ^2.4.6
   intl: ^0.20.2
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   path_provider: ^2.1.5
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
@@ -49,6 +47,7 @@ dependencies:
   permission_handler: ^12.0.0+1
 
 dev_dependencies:
+  flutter_lints:  ^3.0.1
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.14.4"
@@ -64,7 +63,6 @@ flutter_launcher_icons:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  hive_generator: ^2.0.1
   build_runner: ^2.4.15
 
 # For information on the generic Dart part of this file, see the
